feat(ui): redesign event details page with ocean serenity theme and global DTO imports

--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -10,6 +10,7 @@
 @import url('components/auth.css');
 @import url('components/dashboard.css');
 @import url('components/event-form.css');
+@import url('components/event-details.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
