--- a/src/EventPlanning.Web/Views/_ViewImports.cshtml
+++ b/src/EventPlanning.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using EventPlanning.Web
 @using EventPlanning.Web.Models
 @using EventPlanning.Web.Extensions
+@using EventPlanning.Application.DTOs
+@using EventPlanning.Application.DTOs.Event
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
