--- a/src/EventPlanning.Web/Views/Event/Edit.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EventPlanning.Domain.Enums
-@model EventPlanning.Application.DTOs.UpdateEventDto
+@model UpdateEventDto
 
 @{
     ViewData["Title"] = "Edit Event";
