--- a/src/EventPlanning.Web/Areas/Admin/Views/Venue/Edit.cshtml
+++ b/src/EventPlanning.Web/Areas/Admin/Views/Venue/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EventPlanning.Application.DTOs.UpdateVenueDto
+﻿@model EventPlanning.Application.DTOs.Venue.UpdateVenueDto
 
 @{
     ViewData["Title"] = "Edit Venue";
