--- a/src/EventPlanning.Web/Areas/Admin/Views/Venue/Index.cshtml
+++ b/src/EventPlanning.Web/Areas/Admin/Views/Venue/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EventPlanning.Application.DTOs.VenueDto>
+﻿@model List<EventPlanning.Application.DTOs.Venue.VenueDto>
 
 @{
     ViewData["Title"] = "Manage Venues";
