Refactor Profile: Remove DataAnnotations in favor of FluentValidation

--- a/src/EventPlanning.Web/Views/Profile/Index.cshtml
+++ b/src/EventPlanning.Web/Views/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EventPlanning.Application.DTOs
-@model EditProfileDto
+@model EventPlanning.Application.DTOs.Profile.EditProfileDto
 
 @{
     ViewData["Title"] = "My Profile";
