--- a/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using EventPlanning.Infrastructure.Identity
+﻿@using EventPlanning.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<User> SignInManager
